--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #0077b6;
+    background-color: #aed0e2;
     margin-left: 0.25rem;
     margin-right: 0.25rem;
 }
@@ -8,7 +8,7 @@ body{
     margin: 1rem;
     border: 2px solid black;
     border-radius: 0.75rem;
-    background-color: #90e0ef;
+    background-color: #eee;
     color: #000
 }
 
